--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "lucide-react": "^0.487.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-hot-toast": "^2.5.2",
         "react-markdown": "^10.1.0",
         "react-router": "^7.5.2",
         "tailwind-merge": "^3.2.0",
