--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hot-toast": "^2.5.2",
+        "react-linkify": "1.0.0-alpha",
         "react-markdown": "^10.1.0",
         "react-router": "^7.5.2",
+        "react-youtube": "^10.1.0",
         "remark-gfm": "^4.0.1",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.3",
@@ -40,6 +42,7 @@
         "@types/node": "^22.14.0",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
+        "@types/react-linkify": "^1.0.4",
         "@vitejs/plugin-react": "^4.3.4",
         "eslint": "^9.21.0",
         "eslint-plugin-react-hooks": "^5.1.0",
